# hsm-attest

./: Cargo.toml  README.md
.cargo/: config.toml
attest-verify-rs/: Cargo.toml  README.md
attest-verify-rs/src/: error.rs  lib.rs  macros.rs  state_transitions.rs  tlv_mapping.rs  writer.rs
docs/: hsm-process.md
src/: function.rs  lib.rs  macros.rs  state_transitions.rs  tlv_mapping.rs
wasm/: Cargo.toml  hsmattest.wasm  index.html  scriptmod.js
wasm/.cargo/: config.toml
wasm/src/: lib.rs
