[package]
name = "attest-verify-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hsmattest"
path = "./src/lib.rs"

[[bin]]
name = "hsmattest_bin"
path = "src/bin/main.rs"

[dependencies]
num_enum = "0.7.2"
